improve coverage, small refactoring